src/objects/MUSW__Permit2__c.object
<CustomObject>
    <description>Permit application details</description>
    <fields>
        <fullName>A_Division_Of__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>A Division Of:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <description>Account Email</description>
        <formula>MUSW__Account__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aerobic_Treatment_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aerobic Treatment Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agent Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Anchoring_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anchoring Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Submitted_Date__c</fullName>
        <description>App Submitted Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>App Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Applicant_Full_Name__c</fullName>
        <description>Built for referencing in letters</description>
        <formula>MUSW__Applicant__r.FirstName &amp; &apos; &apos; &amp;  MUSW__Applicant__r.MiddleName &amp; &apos; &apos; &amp;  MUSW__Applicant__r.LastName</formula>
        <label>Applicant Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Status__c</fullName>
        <description>Applicant Status</description>
        <formula>TEXT( MUSW__Applicant__r.Contact_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Method__c</fullName>
        <description>This refers to the application method being applied for- General Application, Examination, etc.</description>
        <label>Application Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Permit_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Application_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <description>Field to store Application Number</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Application Number</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>This refers to the application type being applied for: Application Types- Trades Credential, Plan Review, Permit To Operate, etc.</description>
        <label>Application Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>At_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>At Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttestationFullName__c</fullName>
        <description>This is the attester full name.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AttestationFullName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attestation_Date__c</fullName>
        <description>This is the date of the attestation.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Attestation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attestation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the attestation</description>
        <label>Attestation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NSF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Block_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Block Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bluebeam_Project_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bluebeam Project Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_License__c</fullName>
        <formula>OR(ISPICKVAL( Permit_Type__c , &apos;Manufactured Homes Community Permit&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Permit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chlorinator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chlorinator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_Book__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Code Book</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Edition__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Code Edition</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_Address__c</fullName>
        <description>To store community address if community ID is not provided</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Community Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_ID_Number__c</fullName>
        <description>To store community id for a permit</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Community ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Name__c</fullName>
        <description>To store community name for a permit</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Community Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Community Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_or_Standard_Organization__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company or Standard Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constructed_Wetlands__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Constructed Wetlands</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Community County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Site_Count__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Site Count</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dep__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Depth to Limiting Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Firm__c</fullName>
        <description>Design Firm</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Design Firm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Wastewater_Flow_GPD__c</fullName>
        <label>Design Wastewater Flow (GPD)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1000 gpd or less</fullName>
                </value>
                <value>
                    <fullName>1000 - 2000 gpd</fullName>
                </value>
                <value>
                    <fullName>&gt; 5000 gpd</fullName>
                </value>
                <value>
                    <fullName>2001 - 5000 gpd</fullName>
                </value>
                <value>
                    <fullName>5000 gpd or less</fullName>
                </value>
                <value>
                    <fullName>5000 - 10000 gpd</fullName>
                </value>
                <value>
                    <fullName>greater than 10000 gpd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_Wastewater_Flow_value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Design Wastewater Flow value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designer_Address__c</fullName>
        <description>Designer Address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Designer Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Designer_Contact_Person__c</fullName>
        <description>Designer Contact Person</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Designer Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designer_Email__c</fullName>
        <description>Designer Email</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Designer Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designer_First_Name__c</fullName>
        <description>Designer First Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Designer First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designer_Last_Name__c</fullName>
        <description>Designer Last Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Designer Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designer_Phone__c</fullName>
        <description>Designer Phone</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Designer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Dispersal_Area_Reduced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dispersal Area Reduced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effluent_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Effluent Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Experiment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Experiment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id of the record</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Source__c</fullName>
        <description>External Source</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <description>Facility Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factor_BVD__c</fullName>
        <label>Factor BVD</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floodplain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Floodplain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is checked when answered Yes to generate invoice</description>
        <label>Generate Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_From_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to hide the record from being displayed in Public Lookup</description>
        <inlineHelpText>Check to hide from Public Look-Up</inlineHelpText>
        <label>Hide From Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interpretive_Determination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interpretive Determination?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Late_Renewal_Eligible__c</fullName>
        <description>Formula to check Late Renewal Eligibility</description>
        <formula>IF((TODAY()&gt;MUSW__Expiration_Date__c &amp;&amp; TODAY()&lt;= Late_Renewal_Eligible_End_Date__c  &amp;&amp; ( ISPICKVAL(MUSW__Status__c, &apos;Active&apos;) || ISPICKVAL(MUSW__Status__c, &apos;Late Renewal&apos;))), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Late Renewal Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Renewal_Eligible__c</fullName>
        <description>Formula to check Renewal Eligibility</description>
        <formula>IF((TODAY() &gt;= Renewal_Eligible_Start_Date__c &amp;&amp; TODAY() &lt;= MUSW__Expiration_Date__c  &amp;&amp; ( ISPICKVAL(MUSW__Status__c, &apos;Active&apos;))), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Renewal Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Late_Renewal_Eligible_End_Date__c</fullName>
        <description>Date until which a permit is eligible for late renewal - based on expiration date and logic from Renewal_Reinstatement_Eligibility__c</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Late Renewal Eligible End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Description__c</fullName>
        <description>Legal Description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Legal Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Licensee_Name__c</fullName>
        <description>Name of the account.</description>
        <formula>MUSW__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MHC_Application_Type__c</fullName>
        <label>MHC Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Newly Licensed Community</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>Change in Ownership</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated permit account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Permits</relationshipLabel>
        <relationshipName>Permits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__AlertCode__c</fullName>
        <description>Numeric value that determines the alert indicator color. Updated by AlertParentUpdate trigger on Task object.</description>
        <label>Alert Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Alert_Indicator__c</fullName>
        <description>Stoplight image displays green (0), yellow (1),  or red (2), depending on the value of the alert code field.</description>
        <formula>HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+ Id, IMAGE( 
CASE( MUSW__AlertCode__c, 
0, &quot;/img/samples/light_green.gif&quot;, 
1, &quot;/img/samples/light_yellow.gif&quot;, 
2, &quot;/img/samples/light_red.gif&quot;, 
&quot;https://letterbatch.mybasicgov.com/img/light_off.gif&quot;), 
&quot;none&quot;), &quot;_top&quot;) + IF(MUSW__Parcel__c != null, &quot; Par: &quot; + HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+  MUSW__Parcel__c, IMAGE( 
CASE( MUSW__Parcel__r.MUSW__AlertCode__c, 
0, &quot;/img/samples/light_green.gif&quot;, 
1, &quot;/img/samples/light_yellow.gif&quot;, 
2, &quot;/img/samples/light_red.gif&quot;, 
&quot;https://letterbatch.mybasicgov.com/img/light_off.gif&quot;), 
&quot;none&quot;), &quot;_top&quot;),&quot;&quot;)</formula>
        <inlineHelpText>Click to view/add/update your Alerts</inlineHelpText>
        <label>Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The applicant submitting the permit application.</description>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Permit Applications</relationshipLabel>
        <relationshipName>Applicant_Permit2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__City__c</fullName>
        <description>City location of permit.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Construction_Area__c</fullName>
        <description>Total construction area of the structure included in the permit.</description>
        <inlineHelpText>Total construction area calculated from area work items (eg. SQ FT)</inlineHelpText>
        <label>Construction Area</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Construction_Type__c</fullName>
        <description>Primary structure material type.</description>
        <label>Construction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>IIA</fullName>
                </value>
                <value>
                    <fullName>IIB</fullName>
                </value>
                <value>
                    <fullName>IIIA</fullName>
                </value>
                <value>
                    <fullName>IIIB</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>VB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__DateCompleted__c</fullName>
        <description>Date the permit was closed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Description__c</fullName>
        <description>Description of the work to be permitted.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>MUSW__Equipment__c</referenceTo>
        <relationshipLabel>Permits</relationshipLabel>
        <relationshipName>Permits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Expiration_Date__c</fullName>
        <description>Date the permit expires on.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Geolocation__c</fullName>
        <description>Point location of the permit.</description>
        <label>Geolocation</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MUSW__Issue_Date__c</fullName>
        <description>Date the permit was issued (approved).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Issued_Number__c</fullName>
        <description>Unique number allocated to this permit.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Issued No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Latitude__c</fullName>
        <description>Legacy.</description>
        <label>Latitude</label>
        <precision>17</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Longitude__c</fullName>
        <description>Legacy.</description>
        <label>Longitude</label>
        <precision>17</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Occupancy_Limit__c</fullName>
        <description>Approval limit of person occupancy.</description>
        <label>Occupancy Limit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Parcel_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated owner of the parcel (brought in by the associated parcel).</description>
        <inlineHelpText>As indicated on parcel</inlineHelpText>
        <label>Primary Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Permits as Primary Owner</relationshipLabel>
        <relationshipName>Parcel_Owner_Permit2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Parcel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated parcel or address of the permit.</description>
        <label>Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipLabel>Permits</relationshipLabel>
        <relationshipName>Permit2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Project2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated project for permits that need to aggregated</description>
        <label>Project</label>
        <referenceTo>MUSW__Project2__c</referenceTo>
        <relationshipLabel>Permits</relationshipLabel>
        <relationshipName>Permit2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Project_Area__c</fullName>
        <description>Total area of the project included in the permit.</description>
        <inlineHelpText>Square Area - Total area calculated from area work items (eg. SQ FT) contributing to Permit Valuation</inlineHelpText>
        <label>Project Area</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Renewal_Date__c</fullName>
        <description>Date the permit was renewed. This is not typically used.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date Permit renewed or extended</inlineHelpText>
        <label>Renewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__State__c</fullName>
        <description>State location of the permit.</description>
        <label>State/ Prov.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                    <default>true</default>
                    <label>CA</label>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Status__c</fullName>
        <description>Status of the permit as it moves through the business workflow.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Resubmitted</fullName>
                </value>
                <value>
                    <fullName>Issued</fullName>
                </value>
                <value>
                    <fullName>Finaled</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Street__c</fullName>
        <description>Street location of the permit. This may include a street number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Balance__c</fullName>
        <description>Formula field that calculates the difference between total fees and total payments.</description>
        <formula>MUSW__Total_Fees__c - MUSW__Total_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Fees__c</fullName>
        <description>Total amount owing against this permit. This is automatically calculated.</description>
        <inlineHelpText>Automatically Refreshed after Fee updates</inlineHelpText>
        <label>Total Fees</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Payments__c</fullName>
        <description>Total amount of payments allocated to this permit. This is automatically calculated.</description>
        <label>Total Payments</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <description>The permit type. This is typically related to the record type.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Building</fullName>
                    <default>true</default>
                    <label>Building</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Plumbing</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Unit__c</fullName>
        <description>Unit number of the address location of the permit, such as for a condo or apartment.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Unit</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Use_Class__c</fullName>
        <description>Classification categories of how this permitted structure will be used.</description>
        <label>Use Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MUSW__Use_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>